--- a/products.html
+++ b/products.html
@@ -36,15 +36,72 @@
             <ul id="navbar">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about.html" >About</a></li>
-                <li><a href="products.html">Products</a>
+                <li class="dropdown">
+                    <a data-toggle="dropdown" class="dropdown-toggle" href="products.html">Products</a>
+                    <ul class="dropdown-menu" style="color: yellow;">
+                      <li>
+                        <a href="#" style="color: black;">Flat Steel Products</a>
+                        <ul class="dropdown-menu sub-menu">
+                          <li><a href="hot_rolled_coils_and Sheet.html">HOT ROLLED COILS AND SHEETS</a></li>
+                          <li><a href="#">COLS ROLLED STEEL COILS AND SHEETS</a></li>
+                          <li><a href="#">GALVANISED | ALUMINISED STEEL COILS AND SHEETS</a></li>
+                          <li><a href="#">ELECTRO-GALVANISED STEEL COILS</a></li>
+                          <li><a href="#">PRE-PAINTED STEEL COILS</a></li>
+                          <li><a href="#">ELECTROLYTIC TINPLATE/TIN FREE STEEL/TIN MILL BLACK PLATE COILS</a></li>
+                          <li><a href="#">COLD ROLLSE GRAIN ORIENTED(CRNGO) COILS</a></li>
+                          <li><a href="#">COLD ROLLSE NON GRAIN ORIENTED(CRNGO) COILS</a></li>
+                          <li><a href="#">HEAVY PLATES AND CHEQUERED SHEETS</a></li>
+                          <li><a href="#">STAINLESS STEEL COILS</a></li>
+                        </ul>
+                      </li>
+                      <li>
+                        <a href="#" style="color: black;" >Long Steel Products</a>
+                        <ul class="dropdown-menu sub-menu">
+                          <li><a href="#">BRIGHT BARS</a></li>
+                          <li><a href="#">WIRE RODS</a></li>
+                        </ul>
+                      </li>
+                      <li>
+                        <a href="#" style="color: black;">Metal Scrap</a>
+                        <ul class="dropdown-menu sub-menu">
+                          <li><a href="#">FERROUS SCRAP</a></li>
+                          <li><a href="#">NON-FERROUS SCRAP</a></li>
+                        </ul>
+                      </li>
+                    </ul>
                 </li>
+
                 <li><a href="news.html">News&Insights</a></li>
                 <li><a href="contact.html">Contact</a></li>
             </ul>
         </div>
         <div class="col-md-6"></div>
         <div class="col-md-2" >
-            <button ><i class="fa-solid fa-bars"></i></button>
+            <div id="mySidebar" class="sidebar">
+                <a class="closebtn" onclick="closeNav()">×</a>
+                <div>
+                    <img src="images/EU-Metal-Logo-white.png" class="side-logo">
+
+                </div>
+                <div class="side-info">
+                    <p>We bring the best steel solution to you. We are EU-Metal BV.</p>
+                    <h6>CONTACT INFO</h6>
+                    <p>+32-33049520</p>
+                    <br>
+                    <p>info@eu-metal.be</p>
+                    <h6>Follow Us</h6>
+                    <ul style="list-style:none; display:flex">
+                        <li><a><i class="fa-brands fa-facebook-f"></i></a></li>
+                        <li><a><i class="fa-brands fa-instagram"></i></a></li>
+                        <li><a><i class="fa-brands fa-twitter"></i></a></li>
+                        <li><a><i class="fa-brands fa-youtube"></i></a></li>
+                    </ul>
+                   <small> Copyright © 2022 EU-Metal | All Rights Reserved</small>
+                </div>
+                
+              </div>
+    
+            <button onclick="openNav()"><i class="fa-solid fa-bars"></i></button>
             <button class="btn btn-warning">Get A Quote</button>
         </div>
 </section>
@@ -62,7 +119,7 @@
              Also, these products are used in non-critical surface applications such as automotive frames, wheels, small parts, construction products, household items, agricultural equipments, tubes & sections, 
              oﬀ-highway equipments, guardrails, cylinders, racks & shelves, plates & slabs etc</p>
 
-             <a href="" class="custom-button">Discover More</a>
+             <a href="hot_rolled_coils_and Sheet.html" class="custom-button">Discover More</a>
     </div>
 
     <div class="col-md-6" style="width: 50%;">
@@ -82,7 +139,7 @@
               Cold rolled steel is mainly used for electrical appliances, such as refrigerator, washing machine, freezer, air conditioner, water heater, electric rice cooker, ovens. Also automotive components, bicycle parts, construction & building components,
              domestic appliances, furniture, round & square tubes and sections, electrical ﬁttings & panels etc.</p>
 
-             <a href="" class="custom-button">Discover More</a>
+             <a href="cold_rolled_steel_coils_and_sheet.html" class="custom-button">Discover More</a>
     </div>
 </section>
 <section class="product_sec">
@@ -105,7 +162,7 @@
         <h2>ELECTRO-GALVANISED/GALVANNEALED STEEL COILS</h2>
         <p>It has a smooth ﬁnish and very good in power coated and deep draw application since each zinc particle is individually stuck to minor steel due to the electrolysis process. Various applications are electronic parts, auto body panels, household items, doors, door frames, electrical appliances, </p>
 
-             <a href="" class="custom-button">Discover More</a>
+             <a href="electro_gal_steel.html" class="custom-button">Discover More</a>
     </div>
 </section>
 <section class="product_sec">
@@ -133,7 +190,7 @@
             cans, food packaging like edible oil, preserved food, pickles, biscuits,
              chocolates and non-food applications like decorative items, toys, caps etc.</p>
 
-             <a href="" class="custom-button">Discover More</a>
+             <a href="electrolytic-tinplate-tin-free-steel-tin-mill-black-plate-coils.html" class="custom-button">Discover More</a>
     </div>
 </section>
 
