--- a/cold_rolled_steel_coils_and_sheet.html
+++ b/cold_rolled_steel_coils_and_sheet.html
@@ -43,33 +43,33 @@
                 <a href="#" style="color: black;">Flat Steel Products</a>
                 <ul class="dropdown-menu sub-menu">
                     <li><a href="hot_rolled_coils_and Sheet.html">HOT ROLLED COILS AND SHEETS</a></li>
-                    <li><a href="#">COLS ROLLED STEEL COILS AND SHEETS</a></li>
-                    <li><a href="#">GALVANISED | ALUMINISED STEEL COILS AND SHEETS</a></li>
-                    <li><a href="#">ELECTRO-GALVANISED STEEL COILS</a></li>
-                    <li><a href="#">PRE-PAINTED STEEL COILS</a></li>
-                    <li><a href="#">ELECTROLYTIC TINPLATE/TIN FREE STEEL/TIN MILL BLACK PLATE COILS</a></li>
-                    <li><a href="#">COLD ROLLSE GRAIN ORIENTED(CRNGO) COILS</a></li>
-                    <li><a href="#">COLD ROLLSE NON GRAIN ORIENTED(CRNGO) COILS</a></li>
-                    <li><a href="#">HEAVY PLATES AND CHEQUERED SHEETS</a></li>
-                    <li><a href="#">STAINLESS STEEL COILS</a></li>
-                </ul>
+                    <li><a href="cold_rolled_steel_coils_and_sheet.html">COLD ROLLED STEEL COILS AND SHEETS</a></li>
+                    <li><a href="gal_alu_steel_coil_and _sheet.html">GALVANISED | ALUMINISED STEEL COILS AND SHEETS</a></li>
+                    <li><a href="electro_gal_steel.html">ELECTRO-GALVANISED STEEL COILS</a></li>
+                    <li><a href="pre_painted_steel_coil.html">PRE-PAINTED STEEL COILS</a></li>
+                    <li><a href="electrolytic-tinplate-tin-free-steel-tin-mill-black-plate-coils.html">ELECTROLYTIC TINPLATE/TIN FREE STEEL/TIN MILL BLACK PLATE COILS</a></li>
+                    <li><a href="cold-rolled-grain-oriented-coils.html">COLD ROLLSE GRAIN ORIENTED(CRNGO) COILS</a></li>
+                    <li><a href="cold-rolled-non-grain-oriented-coils.html">COLD ROLLSE NON GRAIN ORIENTED(CRNGO) COILS</a></li>
+                    <li><a href="heavy-plates-andhequered-sheets.html">HEAVY PLATES AND CHEQUERED SHEETS</a></li>
+                    <li><a href="stainless-steel-coils-2.html">STAINLESS STEEL COILS</a></li>
+                  </ul>
                 </li>
                 <li>
-                <a href="#" style="color: black;" >Long Steel Products</a>
-                <ul class="dropdown-menu sub-menu">
-                    <li><a href="#">BRIGHT BARS</a></li>
-                    <li><a href="#">WIRE RODS</a></li>
-                </ul>
+                  <a href="#" style="color: black;" >Long Steel Products</a>
+                  <ul class="dropdown-menu sub-menu">
+                    <li><a href="bright_bars.html">BRIGHT BARS</a></li>
+                    <li><a href="wire_rods.html">WIRE RODS</a></li>
+                  </ul>
                 </li>
                 <li>
-                <a href="#" style="color: black;">Metal Scrap</a>
-                <ul class="dropdown-menu sub-menu">
-                    <li><a href="#">FERROUS SCRAP</a></li>
-                    <li><a href="#">NON-FERROUS SCRAP</a></li>
-                </ul>
+                  <a href="#" style="color: black;">Metal Scrap</a>
+                  <ul class="dropdown-menu sub-menu">
+                    <li><a href="ferrous_non_ferrous_scrap.html">FERROUS SCRAP</a></li>
+                    <li><a href="ferrous_non_ferrous_scrap.html">NON-FERROUS SCRAP</a></li>
+                  </ul>
                 </li>
-            </ul>
-        </li>
+              </ul>
+          </li>
 
         <li><a href="news.html">News&Insights</a></li>
         <li><a href="contact.html">Contact</a></li>
