--- a/index.html
+++ b/index.html
@@ -14,26 +14,30 @@
 <body style="width:100%">
    
     <section class="header">
+        <div class="col-md-4">
         <a href="https://api.whatsapp.com/send?phone=32485531349" class="ahead">WhatsApp: +32 485531349</a>
-        <a href="" class="ahead">Email: info@eu-metal.be</a>
-
+        <a href="" class="ahead" id="ee">Email: info@eu-metal.be</a>
+        </div>
+        <div class="col-md-8">
     <ul id="nav">
-       <li>Follow us</li>
+       <li id="e">Follow us</li>
        <li><a href="https://www.facebook.com/eumetalbvba/"><i class="fa-brands fa-facebook-f"></i>Facebook</a></li>
        <li><a href="https://www.instagram.com/eumetalbvba/"><i class="fa-brands fa-instagram"></i>Instagram</a></li>
        <li><a href="https://twitter.com/eumetalbvba"><i class="fa-brands fa-twitter"></i>Twitter</a></li>
        <li><a href="https://www.linkedin.com/company/eu-metal-bvba"><i class="fa-brands fa-linkedin"></i>Linkedin</a></li>
        <li><a href="https://www.youtube.com/channel/UC5Vi45UZHICT7tKfq4NEE3Q"><i class="fa-brands fa-youtube"></i>Youtube</a></li>
     </ul>
-
+</div>
    </section>
+
+
 
 
    <section id="navigation">
         <div class="col-md-2">
             <a href="#"><img src="images/EU-Metal-Logo-white.png" class="logo"></a>
         </div>
-        <div class=" col-md-2 site-menu" >
+        <div class=" col-md-2" >
             <ul id="navbar">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about.html" >About</a></li>
@@ -77,7 +81,7 @@
                 <li><a href="contact.html">Contact</a></li>
             </ul>
         </div>
-      <div class="col-md-6"></div>
+       <div class="col-md-6"></div> 
         <div class="col-md-2" >
             <div id="mySidebar" class="sidebar">
                 <a class="closebtn" onclick="closeNav()">×</a>
@@ -104,7 +108,7 @@
               </div>
     
             <button onclick="openNav()"><i class="fa-solid fa-bars"></i></button>
-            <a href="contact.html" class="nav-button">Get a Quote</a>
+            <a href="contact.html" class="nav-button">Quote</a>
         
         </div>
 </section>
@@ -140,6 +144,7 @@
 
     </div>
     </section>
+
 
 <section id="product1" class="section-p1 banner">
     <div id="product_logo" class="section-title">
