--- a/products.html
+++ b/products.html
@@ -42,34 +42,34 @@
                       <li>
                         <a href="#" style="color: black;">Flat Steel Products</a>
                         <ul class="dropdown-menu sub-menu">
-                          <li><a href="hot_rolled_coils_and Sheet.html">HOT ROLLED COILS AND SHEETS</a></li>
-                          <li><a href="#">COLS ROLLED STEEL COILS AND SHEETS</a></li>
-                          <li><a href="#">GALVANISED | ALUMINISED STEEL COILS AND SHEETS</a></li>
-                          <li><a href="#">ELECTRO-GALVANISED STEEL COILS</a></li>
-                          <li><a href="#">PRE-PAINTED STEEL COILS</a></li>
-                          <li><a href="#">ELECTROLYTIC TINPLATE/TIN FREE STEEL/TIN MILL BLACK PLATE COILS</a></li>
-                          <li><a href="#">COLD ROLLSE GRAIN ORIENTED(CRNGO) COILS</a></li>
-                          <li><a href="#">COLD ROLLSE NON GRAIN ORIENTED(CRNGO) COILS</a></li>
-                          <li><a href="#">HEAVY PLATES AND CHEQUERED SHEETS</a></li>
-                          <li><a href="#">STAINLESS STEEL COILS</a></li>
-                        </ul>
-                      </li>
-                      <li>
-                        <a href="#" style="color: black;" >Long Steel Products</a>
-                        <ul class="dropdown-menu sub-menu">
-                          <li><a href="#">BRIGHT BARS</a></li>
-                          <li><a href="#">WIRE RODS</a></li>
-                        </ul>
-                      </li>
-                      <li>
-                        <a href="#" style="color: black;">Metal Scrap</a>
-                        <ul class="dropdown-menu sub-menu">
-                          <li><a href="#">FERROUS SCRAP</a></li>
-                          <li><a href="#">NON-FERROUS SCRAP</a></li>
-                        </ul>
-                      </li>
-                    </ul>
-                </li>
+                            <li><a href="hot_rolled_coils_and Sheet.html">HOT ROLLED COILS AND SHEETS</a></li>
+                            <li><a href="cold_rolled_steel_coils_and_sheet.html">COLD ROLLED STEEL COILS AND SHEETS</a></li>
+                            <li><a href="gal_alu_steel_coil_and _sheet.html">GALVANISED | ALUMINISED STEEL COILS AND SHEETS</a></li>
+                            <li><a href="electro_gal_steel.html">ELECTRO-GALVANISED STEEL COILS</a></li>
+                            <li><a href="pre_painted_steel_coil.html">PRE-PAINTED STEEL COILS</a></li>
+                            <li><a href="electrolytic-tinplate-tin-free-steel-tin-mill-black-plate-coils.html">ELECTROLYTIC TINPLATE/TIN FREE STEEL/TIN MILL BLACK PLATE COILS</a></li>
+                            <li><a href="cold-rolled-grain-oriented-coils.html">COLD ROLLSE GRAIN ORIENTED(CRNGO) COILS</a></li>
+                            <li><a href="cold-rolled-non-grain-oriented-coils.html">COLD ROLLSE NON GRAIN ORIENTED(CRNGO) COILS</a></li>
+                            <li><a href="heavy-plates-andhequered-sheets.html">HEAVY PLATES AND CHEQUERED SHEETS</a></li>
+                            <li><a href="stainless-steel-coils-2.html">STAINLESS STEEL COILS</a></li>
+                          </ul>
+                        </li>
+                        <li>
+                          <a href="#" style="color: black;" >Long Steel Products</a>
+                          <ul class="dropdown-menu sub-menu">
+                            <li><a href="bright_bars.html">BRIGHT BARS</a></li>
+                            <li><a href="wire_rods.html">WIRE RODS</a></li>
+                          </ul>
+                        </li>
+                        <li>
+                          <a href="#" style="color: black;">Metal Scrap</a>
+                          <ul class="dropdown-menu sub-menu">
+                            <li><a href="ferrous_non_ferrous_scrap.html">FERROUS SCRAP</a></li>
+                            <li><a href="ferrous_non_ferrous_scrap.html">NON-FERROUS SCRAP</a></li>
+                          </ul>
+                        </li>
+                      </ul>
+                  </li>
 
                 <li><a href="news.html">News&Insights</a></li>
                 <li><a href="contact.html">Contact</a></li>
@@ -112,7 +112,7 @@
 </section>
 
 <section class="product_sec">
-    <div class="col-md-6" style="width: 50%;">
+    <div class="col-md-6" >
         <h2>HOT ROLLED (BLACK & PICKLED) STEEL COILS AND SHEETS (HR/PO)</h2>
         <p>Hot Rolled Steel is often used in applications where minutely speciﬁc dimensions aren’t crucial.
              Railroad tracks and construction projects often use hot-rolled steel. 
@@ -122,16 +122,16 @@
              <a href="hot_rolled_coils_and Sheet.html" class="custom-button">Discover More</a>
     </div>
 
-    <div class="col-md-6" style="width: 50%;">
+    <div class="col-md-6" >
         <img src="images/shutterstock_45006073-1024x68-1.jpg">
     </div>
 </section>
 
 <section class="product_sec1">
-    <div class="col-md-6" style="width: 50%;"> 
+    <div class="col-md-6" > 
         <img src="images/shutterstock_484191397-1024x656-2.jpg">
     </div>
-    <div class="col-md-6" style="width: 50%;">
+    <div class="col-md-6">
         <h2>COLD ROLLED STEEL COILS AND SHEETS</h2>
         <p>Cold Rolled Steel is used in applications that demand higher surface quality, 
             such as exposed automobile and appliance panels. The unique properties of cold rolled steel
